--- a/projects/Tomato And IMDB compination Movie Search/Code/Movie Search/tomato Movie Data Extraction.xaml
+++ b/projects/Tomato And IMDB compination Movie Search/Code/Movie Search/tomato Movie Data Extraction.xaml
@@ -7,7 +7,7 @@
   <VisualBasic.Settings>
     <x:Null />
   </VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>831.3333333333334,3664.6666666666665</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1149.3333333333333,4047.3333333333335</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>tomato_Movies_Extraction_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
@@ -117,7 +117,7 @@
       <AssemblyReference>System.Runtime.Numerics</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="File Avtion : Extract Data for celected Movie &#xA;&#xA;pre condetion :&#xA;&#xA;post Condetion :&#xA;&#xA;In_Arg : &#xA;in_intNumberOfRetry&#xA;in_tsRetryDeuration&#xA;&#xA;out_Arg" DisplayName="Movie Data Extracton" sap:VirtualizedContainerService.HintSize="841.3333333333334,3600" sap2010:WorkflowViewState.IdRef="Sequence_4">
+  <Sequence sap2010:Annotation.AnnotationText="File Avtion : Extract Data for celected Movie &#xA;&#xA;pre condetion :&#xA;&#xA;post Condetion :&#xA;&#xA;In_Arg : &#xA;in_intNumberOfRetry&#xA;in_tsRetryDeuration&#xA;&#xA;out_Arg" DisplayName="Movie Data Extracton" sap:VirtualizedContainerService.HintSize="841.3333333333334,3982.6666666666665" sap2010:WorkflowViewState.IdRef="Sequence_4">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="strMovieData" />
     </Sequence.Variables>
@@ -145,12 +145,12 @@
       </Assign.Value>
     </Assign>
     <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="779.3333333333334,176.66666666666666" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Info" Message="[&quot;Temp Strts&quot;]" />
-    <TryCatch DisplayName="Try Catch" sap:VirtualizedContainerService.HintSize="779.3333333333334,3050" sap2010:WorkflowViewState.IdRef="TryCatch_1">
+    <TryCatch DisplayName="Try Catch" sap:VirtualizedContainerService.HintSize="779.3333333333334,3432.6666666666665" sap2010:WorkflowViewState.IdRef="TryCatch_1">
       <TryCatch.Try>
-        <ui:RetryScope DisplayName="Movie Data Extracton Body" sap:VirtualizedContainerService.HintSize="740.6666666666666,2755.3333333333335" sap2010:WorkflowViewState.IdRef="RetryScope_1">
+        <ui:RetryScope DisplayName="Movie Data Extracton Body" sap:VirtualizedContainerService.HintSize="740.6666666666666,3138" sap2010:WorkflowViewState.IdRef="RetryScope_1">
           <ui:RetryScope.ActivityBody>
             <ActivityAction>
-              <Sequence DisplayName="Action" sap:VirtualizedContainerService.HintSize="698.6666666666666,2576.6666666666665" sap2010:WorkflowViewState.IdRef="Sequence_5">
+              <Sequence DisplayName="Action" sap:VirtualizedContainerService.HintSize="698.6666666666666,2959.3333333333335" sap2010:WorkflowViewState.IdRef="Sequence_5">
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -237,20 +237,20 @@
                     </sap:WorkflowViewStateService.ViewState>
                   </ui:LogMessage>
                 </Sequence>
-                <Sequence DisplayName="Action" sap:VirtualizedContainerService.HintSize="636.6666666666666,1464.6666666666667" sap2010:WorkflowViewState.IdRef="Sequence_11">
+                <Sequence DisplayName="Action" sap:VirtualizedContainerService.HintSize="636.6666666666666,1847.3333333333333" sap2010:WorkflowViewState.IdRef="Sequence_11">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                       <x:Boolean x:Key="IsPinned">False</x:Boolean>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
-                  <ui:BrowserScope Browser="{x:Null}" SearchScope="{x:Null}" TimeoutMS="{x:Null}" UiBrowser="{x:Null}" BrowserType="Edge" DisplayName="Attach Browser 'msedge.exe Lady'" sap:VirtualizedContainerService.HintSize="574.6666666666666,1344.6666666666667" sap2010:WorkflowViewState.IdRef="BrowserScope_1" InformativeScreenshot="b3251d793ed155e3731c7a64a36238ae" Selector="&lt;html app='msedge.exe' title='*Rotten Tomatoes' /&gt;">
+                  <ui:BrowserScope Browser="{x:Null}" SearchScope="{x:Null}" TimeoutMS="{x:Null}" UiBrowser="{x:Null}" BrowserType="Edge" DisplayName="Attach Browser 'msedge.exe Lady'" sap:VirtualizedContainerService.HintSize="574.6666666666666,1727.3333333333333" sap2010:WorkflowViewState.IdRef="BrowserScope_1" InformativeScreenshot="b3251d793ed155e3731c7a64a36238ae" Selector="&lt;html app='msedge.exe' title='*Rotten Tomatoes' /&gt;">
                     <ui:BrowserScope.Body>
                       <ActivityAction x:TypeArguments="x:Object">
                         <ActivityAction.Argument>
                           <DelegateInArgument x:TypeArguments="x:Object" Name="ContextTarget" />
                         </ActivityAction.Argument>
-                        <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="540.6666666666666,1174.6666666666667" sap2010:WorkflowViewState.IdRef="Sequence_15">
+                        <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="540.6666666666666,1557.3333333333333" sap2010:WorkflowViewState.IdRef="Sequence_15">
                           <sap:WorkflowViewStateService.ViewState>
                             <scg:Dictionary x:TypeArguments="x:String, x:Object">
                               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -354,10 +354,10 @@
                               </scg:List>
                             </ui:MultipleAssign.AssignOperations>
                           </ui:MultipleAssign>
-                          <If Condition="[strMovieData.Split(&quot;,&quot;).Count&lt;4]" sap:VirtualizedContainerService.HintSize="478.6666666666667,57.333333333333336" sap2010:WorkflowViewState.IdRef="If_4">
+                          <If Condition="[strMovieData.Split(&quot;,&quot;).Count&lt;3]" sap:VirtualizedContainerService.HintSize="478.6666666666667,501.3333333333333" sap2010:WorkflowViewState.IdRef="If_4">
                             <sap:WorkflowViewStateService.ViewState>
                               <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                                <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+                                <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                                 <x:Boolean x:Key="IsPinned">False</x:Boolean>
                               </scg:Dictionary>
                             </sap:WorkflowViewStateService.ViewState>
@@ -498,14 +498,31 @@
                               </Sequence>
                             </If.Else>
                           </If>
-                          <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="478.6666666666667,109.33333333333333" sap2010:WorkflowViewState.IdRef="MessageBox_4" Text="[&quot;Titel : &quot;+out_dicMovieData(&quot;Titel&quot;)+Environment.NewLine+&#xD;&#xA;&quot;Year : &quot;+out_dicMovieData(&quot;Year&quot;)+Environment.NewLine+&#xD;&#xA;&quot;Duration : &quot;+out_dicMovieData(&quot;Duration&quot;)+Environment.NewLine+&#xD;&#xA;&quot;Type : &quot;+out_dicMovieData(&quot;Type&quot;)+Environment.NewLine+&#xD;&#xA;&quot;Tomatometer : &quot;+out_dicMovieData(&quot;Tomatometer&quot;)+Environment.NewLine+&#xD;&#xA;&quot;Popcornmeter : &quot;+out_dicMovieData(&quot;Popcornmeter&quot;)+Environment.NewLine+&#xD;&#xA;&quot;Certificate : &quot;+out_dicMovieData(&quot;Certificate&quot;)+Environment.NewLine]">
+                          <ui:CommentOut DisplayName="Comment Out" sap:VirtualizedContainerService.HintSize="478.6666666666667,48" sap2010:WorkflowViewState.IdRef="CommentOut_2">
+                            <ui:CommentOut.Body>
+                              <Sequence DisplayName="Ignored Activities" sap:VirtualizedContainerService.HintSize="416,197.33333333333334" sap2010:WorkflowViewState.IdRef="Sequence_36">
+                                <sap:WorkflowViewStateService.ViewState>
+                                  <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                                    <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                                  </scg:Dictionary>
+                                </sap:WorkflowViewStateService.ViewState>
+                                <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="354,109.33333333333333" sap2010:WorkflowViewState.IdRef="MessageBox_14" Text="[&quot;Titel : &quot;+out_dicMovieData(&quot;Titel&quot;)+Environment.NewLine+&#xA;&quot;Year : &quot;+out_dicMovieData(&quot;Year&quot;)+Environment.NewLine+&#xA;&quot;Duration : &quot;+out_dicMovieData(&quot;Duration&quot;)+Environment.NewLine+&#xA;&quot;Type : &quot;+out_dicMovieData(&quot;Type&quot;)+Environment.NewLine+&#xA;&quot;Tomatometer : &quot;+out_dicMovieData(&quot;Tomatometer&quot;)+Environment.NewLine+&#xA;&quot;Popcornmeter : &quot;+out_dicMovieData(&quot;Popcornmeter&quot;)+Environment.NewLine+&#xA;&quot;Certificate : &quot;+out_dicMovieData(&quot;Certificate&quot;)+Environment.NewLine]">
+                                  <sap:WorkflowViewStateService.ViewState>
+                                    <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                                      <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                                      <x:Boolean x:Key="IsPinned">False</x:Boolean>
+                                    </scg:Dictionary>
+                                  </sap:WorkflowViewStateService.ViewState>
+                                </ui:MessageBox>
+                              </Sequence>
+                            </ui:CommentOut.Body>
                             <sap:WorkflowViewStateService.ViewState>
                               <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                                <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                                <x:Boolean x:Key="IsExpanded">False</x:Boolean>
                                 <x:Boolean x:Key="IsPinned">False</x:Boolean>
                               </scg:Dictionary>
                             </sap:WorkflowViewStateService.ViewState>
-                          </ui:MessageBox>
+                          </ui:CommentOut>
                         </Sequence>
                       </ActivityAction>
                     </ui:BrowserScope.Body>
